# graphql-sample

./: .env  .env.test  .gitignore  Makefile  README.md  docker-compose.yaml  nginx.conf  pyproject.toml
.github/workflows/: images_service_pipeline.yml  products_service_pipeline.yml  pullrequestchecks.yml
app/: _app.py  _settings.py  db.py  main.py
app/products/: models.py  repository.py  schema.py
gateway_service/: .env  Dockerfile  index.js  package-lock.json  package.json
images_service/: .env  .env.test  Dockerfile  Makefile  main.py  pyproject.toml  pytest.ini
images_service/images_app/: app.py  db.py  models.py  repository.py  schema.py  services.py  settings.py
images_service/migrations/: env.py
images_service/migrations/versions/: 281e261bfc69_.py  94a45c6c7927_.py  e60cef4baa9f_.py
images_service/tests/: conftest.py  test_images.py
init-db/: images_service.sql  products_service.sql  testdb.sql
migrations/: env.py
migrations/versions/: 7a0b90c8c9a6_.py
products_service/: .env  .env.test  Dockerfile  main.py
products_service/migrations/: env.py
products_service/migrations/versions/: 25d2679494fb_.py
products_service/products_app/: app.py  db.py  models.py  repository.py  schema.py  services.py  settings.py
products_service/tests/: conftest.py  test_products.py
tests/: conftest.py
